New booking spreadsheet for 3D Pribnters

--- a/booking.html
+++ b/booking.html
@@ -127,21 +127,21 @@
                         
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=1870025087">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=472642168">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
                                     <img class="img-portfolio img-responsive" src="img/maintenence.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=835659104s">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_3Extended.png">
                                 </a>
                             </div>
@@ -149,14 +149,14 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=633932372">
-                                    <img class="img-portfolio img-responsive" src="img/maintenence.png">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
+                                    <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_1.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-sm-2">
                           <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=364806900">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_2.png">
                                 </a>
                             </div> 
@@ -164,7 +164,7 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1fxbICCR1D5SEhlahvcyFBms3kcZsh-Q7TzeIqB2GMpQ/edit#gid=1403056053">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_3Extended.png">
                                 </a>
                             </div>
