--- a/booking.html
+++ b/booking.html
@@ -130,11 +130,12 @@
                                 <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM2_1.png">
                                 </a>
+                                https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing
                             </div>
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharingg">
                                     <img class="img-portfolio img-responsive" src="img/maintenence.png">
                                 </a>
                             </div>
@@ -149,7 +150,7 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharing">
+                                <a href="https://docs.google.com/spreadsheets/d/18a7HRkrAKjChsJnxIDJrg7X-EXmYRzHnH9XyHnNsre0/edit?usp=sharingg">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_UM3_1.png">
                                 </a>
                             </div>
