--- a/tutorial.html
+++ b/tutorial.html
@@ -130,6 +130,14 @@
                         </a>
                      </div>
                  </div>
+                        
+                <div class="col-sm-3">
+                     <div class="portfolio-item">
+                        <a href="./tutorials/screenprintTutorial.html">
+                            <img class="img-portfolio img-responsive" src="img/tutorial/screenPrint-01.png">
+                        </a>
+                     </div>
+                 </div>
 
             </div>
                     </div>
