--- a/tutorials/screenprintTutorial.html
+++ b/tutorials/screenprintTutorial.html
@@ -73,9 +73,9 @@
   <ul>
   <li>Prepare your ink: assuming you are using a water solvent ink (aqua set), add a little water and stir it, until you get the right viscosity. (a smooth and creamy-like) </li>
   <li>A good idea is to have some assistance while printing, as you will eventually end up with ink on your hands etc. So having somebody who can help you managing your papers e.g., to and from the print-table, is a great advantage. Remember; one has to work efficiently and fast, without interruption, otherwise the ink will clutter and ruin the mesh for good. </li>
-  <li>When you are all set and ready, place a good portion of ink with a spatular at the end off the screen towards you as shown. &gt; - Place your substrate, and turn on the vacuum. With the bench at half mast, firmly coat your print-area with ink by pushing the squeegee away from yourself. </li>
-  <li>Lower the bench, and with both hands, pull the squeegee in a 60 degree angle towards yourself, while applying an even pressure, swiftly. (NOTE: this takes practice.) </li>
-  <li>Lift the bench, and repeat the coating as before, before you remove your substrate or anything else. It is paramount to keep the open mesh viscous, as the ink dries out incredibly fast. It is important not to coat ink back into the mesh, when you have made your last print.</li>  <br>
+  <li>When you are all set and ready, place a good portion of ink with a spatular at the end off the screen towards you as shown. &gt; - Place your substrate, and turn on the vacuum. With the bench at half mast, firmly coat your print-area with ink by pushing the squeegee away from yourself. This is called flooding.  </li>
+  <li>Lower the bench, and with both hands, pull the squeegee in a 60 degree angle towards yourself, while applying an even pressure, swiftly. This is called stroking (NOTE: this takes practice.) </li>
+  <li>Lift the bench, and repeat the flooding as before, before you remove your substrate or anything else. It is paramount to keep the open mesh viscous, as the ink dries out incredibly fast. When you have made your last print, do not flood ink back into the mesh.</li>  <br>
     <img class="img-portfolio img-responsive" src="../img/tutorial/screenPrinting/DSC_0085.JPG"> <br>
     <img class="img-portfolio img-responsive" src="../img/tutorial/screenPrinting/DSC_0088.JPG"> <br>
     <img class="img-portfolio img-responsive" src="../img/tutorial/screenPrinting/DSC_0090.JPG"> <br> 
@@ -99,8 +99,8 @@
 
 <blockquote>
   <ul>
-  <li>To remove the emulsion (and delete your stencil) mix Saati Remover with water (1:25) in the screen cleaner spray. NOTE: this is poisonous, so by all means use glasses, face mask and gloves when washing out and mixing the stencil cleaner. </li>
-  <li>Spray the solution onto the screen and let it sit for 2-3 minutes (not more). Fix the garden hose to the high pressure sprayer (remember to turn off the water flow after use) and spray the screen free of any trace of emulsion. A so-called ‘ghost image’ of any previous stencils might be visible but by holding the screen up against the light you can tell whether it is emulsion blocking or just ink dye of the mesh. And like the cycle of life, the whole process repeats itself. </li><br>
+  <li>To remove the emulsion (and delete your stencil) mix Saati Remover with water (1:25) in the screen cleaner spray. NOTE: this is highly toxic, so by all means use glasses, face mask and gloves when washing out and mixing the stencil cleaner. </li>
+  <li>Spray the solution onto the screen and let it sit for 1-2 minutes (not more). Fix the garden hose to the high pressure sprayer (remember to turn off the water flow after use) and spray the screen free of any trace of emulsion. A so-called ‘ghost image’ of any previous stencils might be visible but by holding the screen up against the light you can tell whether it is emulsion blocking or just ink dye of the mesh. And like the cycle of life, the whole process repeats itself. </li><br>
     <img class="img-portfolio img-responsive" src="../img/tutorial/screenPrinting/DSC_0103.JPG"> <br>
     <img class="img-portfolio img-responsive" src="../img/tutorial/screenPrinting/DSC_0104.JPG"> <br>
     <img class="img-portfolio img-responsive" src="../img/tutorial/screenPrinting/DSC_0111.JPG"> <br> 
