--- a/tutorial.html
+++ b/tutorial.html
@@ -90,6 +90,14 @@
                                 </a>
                             </div>
                         </div>
+                                                 <div class="col-sm-3">
+                            <div class="portfolio-item">
+                                <a href=" https://github.com/KEA-Makerlab/hello/raw/master/tutorials/cnc/singlelayerpcb-kicadtocnc.pdf">
+                                    <img class="img-portfolio img-responsive" src="img/tutorial/cnc%20machine-01.png">
+                                </a>
+                            </div>
+                        </div>
+                       
                          <div class="col-sm-3">
                             <div class="portfolio-item">
                                 <a href="./tutorials/VersaSTUDIO%20Sticker%20Printer.html ">
