--- a/tutorial.html
+++ b/tutorial.html
@@ -92,7 +92,7 @@
                         </div>
                                                  <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href=" https://github.com/KEA-Makerlab/hello/raw/master/tutorials/cnc/singlelayerpcb-kicadtocnc.pdf">
+                                <a href="https://docs.google.com/document/d/1-IcedPmdlplhzZ1nSAtdAfFwywj7M0KSGvbkoRgkkU0/edit?usp=sharing">
                                     <img class="img-portfolio img-responsive" src="img/tutorial/cnc%20machine-01.png">
                                 </a>
                             </div>
