--- a/tutorial.html
+++ b/tutorial.html
@@ -93,7 +93,7 @@
                                                  <div class="col-sm-3">
                             <div class="portfolio-item">
                                 <a href="https://docs.google.com/document/d/1-IcedPmdlplhzZ1nSAtdAfFwywj7M0KSGvbkoRgkkU0/edit?usp=sharing">
-                                    <img class="img-portfolio img-responsive" src="img/tutorial/cnc%20machine-01.png">
+                                    <img class="img-portfolio img-responsive" src="tutorials/cnc/cnc-pcb1.bmp">
                                 </a>
                             </div>
                         </div>
