--- a/tutorial.html
+++ b/tutorial.html
@@ -141,7 +141,7 @@
                         
                 <div class="col-sm-3">
                      <div class="portfolio-item">
-                        <a href="./tutorials/screenprintTutorial.html">
+                        <a href="./tutorials/screenPrinting/Screenprinting_AtoZ_makerlab.pdf">
                             <img class="img-portfolio img-responsive" src="img/tutorial/screenPrint-01.png">
                         </a>
                      </div>
