Update to Tutorials, tshirt Printer

--- a/tutorial.html
+++ b/tutorial.html
@@ -146,6 +146,22 @@
                         </a>
                      </div>
                  </div>
+                
+                <div class="col-sm-3">
+                     <div class="portfolio-item">
+                        <a href="./tutorials/tshirtPrinter/MANUAL%20T-SHIRT_August.pdf">
+                            <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-01.png">
+                        </a>
+                     </div>
+                 </div>   
+                
+                <div class="col-sm-3">
+                     <div class="portfolio-item">
+                        <a href="https://docs.google.com/document/d/1zxnJvLLCnU7GlJZPOdZpv80dopVkGZhOAT_FPnPbHAA/edit?usp=sharingf">
+                            <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-02.png">
+                        </a>
+                     </div>
+                 </div>  
 
             </div>
                     </div>
