Video Tutorials 3D Printers

--- a/tutorial.html
+++ b/tutorial.html
@@ -162,6 +162,15 @@
                         </a>
                      </div>
                  </div>  
+                        
+                        
+                <div class="col-sm-3">
+                     <div class="portfolio-item">
+                        <a href="./3DPrint_Tutorials.html">
+                            <img class="img-portfolio img-responsive" src="img/tutorial/3dPrint-01.png">
+                        </a>
+                     </div>
+                 </div>  
 
             </div>
                     </div>
