--- a/3DPrint_Tutorials.html
+++ b/3DPrint_Tutorials.html
@@ -12,7 +12,7 @@
    
     
         
-    <title>Machine Safety:</title>
+    <title>3D Printing</title>
     <link rel="stylesheet" href="https://stackedit.io/res-min/themes/base.css" />
 
     <!-- Bootstrap Core CSS -->
