Tool holder and tool library

--- a/assets.html
+++ b/assets.html
@@ -167,9 +167,11 @@
                                 <a href="./assets/KEA_Layout_2016R1.xml" download>
                                     <p>Alphacam Interface</p>
                                 </a>
-                               <!-- <a href="#">
-                                    <p>CNC skabeloner</p>
-                                </a>-->                                
+                                <br>
+                                <a href=./assets/RTools.Alp.zip> <p>CNC Tool Library</p> </a> 
+                                <p>Windows copy content of folder to: C/Alphacam/LICOMDAT/RTools.Alp</p>
+                                <br>
+                                <a href=./assets/Holders.Alp.zip> <p>3D Holder Model</p> </a><p>Windows copy content of folder to: C/Alphacam/LICOMDAT/Holder.Alp</p>  
                             </div>
 
                         </div>
