--- a/3DPrint_Tutorials.html
+++ b/3DPrint_Tutorials.html
@@ -77,8 +77,15 @@
     
     <div class="row">
         <div class="col-sm-12">
+            
+            <h3 id="opening-time"><strong>Cura 3.0 Tutorial</strong></h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/2FgljwgF0ec" frameborder="0" allowfullscreen></iframe>
+
+            <br>
+            <br>
+            <br>            
    
-            <h3 id="opening-time"><strong>Cura Tutorial</strong></h3>
+            <h3 id="opening-time"><strong>Cura 2.7 Tutorial</strong></h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/RX2_e7RqUH0" frameborder="0" allowfullscreen></iframe>
 
             <br>
