added CNC styles

--- a/assets.html
+++ b/assets.html
@@ -169,9 +169,12 @@
                                 </a>
                                 <br>
                                 <a href=./assets/RTools.Alp.zip> <p>CNC Tool Library</p> </a> 
-                                <p>Windows copy content of folder to: C/Alphacam/LICOMDAT/RTools.Alp</p>
+                                <p>Copy content of extracted folder to: C/Alphacam/LICOMDAT/RTools.Alp</p>
                                 <br>
-                                <a href=./assets/Holders.Alp.zip> <p>3D Holder Model</p> </a><p>Windows copy content of folder to: C/Alphacam/LICOMDAT/Holder.Alp</p>  
+                                <a href=./assets/Holders.Alp.zip> <p>3D Holder Model</p> </a><p>Copy content of extracted folder to: C/Alphacam/LICOMDAT/Holder.Alp</p> 
+                                <br>
+                                <a href=./assets/LICOMDIR_Styles.zip> <p>CNC Style Library</p> </a> 
+                                <p>Copy content of extracted folder to: C/Alphacam/LICOMDIR/Styles</p>
                             </div>
 
                         </div>
