New CNC machine tutorial

--- a/tutorial.html
+++ b/tutorial.html
@@ -85,7 +85,7 @@
                         </div>
                          <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=0B1E85uThEYpDM3JTRnFSY3VJUFE">
+                                <a href="./tutorials/cnc/CNCTutorialm.pdf">
                                     <img class="img-portfolio img-responsive" src="img/tutorial/cnc%20machine-01.png">
                                 </a>
                             </div>
