Sign up links added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <h2>Repository features:</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -113,7 +113,7 @@
                                 <a href="assets.html" class="btn btn-light">Give me, give me, give me!</a>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -128,7 +128,7 @@
                                 <a href="booking.html" class="btn btn-light">Need my laser fix!</a>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6">
+                        <div class="col-md-3 col-sm-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -138,7 +138,22 @@
                                     <strong>Tutorials</strong>
                                 </h4>
                                 <p>Machine specific tutorials to get you up and running on your own.</p>
+                                <br>
                                 <a href="tutorial.html" class="btn btn-light">I´m stuck, lets go already!</a>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-edit fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Workshop Sign Up</strong>
+                                </h4>
+                                <p>Intro, Wood Workshop & Fundamental Courses.</p>
+                                <br>
+                                <a href="signup.html" class="btn btn-light"> Want to sign up!</a>
                             </div>
                         </div>
 
