Changed name on images for sign up

--- a/machineSpec.html
+++ b/machineSpec.html
@@ -86,7 +86,7 @@
 <hr>
 <h4 id="flexicam-viper-cnc"><strong>Flexicam Viper CNC</strong></h4>
 
-<p><strong>Filer format:</strong> .dxf .dwg .stl .sldprt .sat/.sab <br>
+<p><strong>Filer format:</strong> .dxf .dwg .sldprt .sat/.sab .iges .stl, <b>Rhino:</b> Parasolid  <br>
 <strong>Work area:</strong> 1000 x 650 x mm <br>
 <strong>Materials:</strong> Wood, MDF/HDF, Plywood, Sika, Foam <br>
 <strong>Software:</strong> Alphacam (get software form Makerlab) </p>
