--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Sign-Up links:</h2>
                     <hr class="small">
-                       <!-- Intro and Safety 2018 -->
+                       <!-- Lab Introduction 2018 -->
                     <div class="row">
                         <div class="col-sm-3"> 
                             <div class="portfolio-item">
@@ -84,10 +84,10 @@
                                 </a>
                             </div>
                         </div>
-                        <!-- Wood Workshop 2018 -->
+                        <!-- Wood Workshop & Safety 2018 -->
                         <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="#">
+                                <a href="https://docs.google.com/spreadsheets/d/1cLKokdIua30npoFGYeWurTCApu9AgyGwcqoOENTvOvg/edit#gid=0">
                                     <img class="img-portfolio img-responsive" src="img/signUp_WoodWorshop.png">
                                 </a>
                             </div>
