--- a/booking.html
+++ b/booking.html
@@ -73,7 +73,10 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Booking links:</h2>
+
                     <hr class="small">
+
+                    <font size="3" color="red">If you are booking from a mobile platform, you need to install <b> Google Sheet APP</b> to be able to edit!!</font>
                     <div class="row">
                         <div class="col-sm-3">
                             <div class="portfolio-item">
@@ -131,6 +134,16 @@
             <!-- /.row -->
         </div>
         <!-- /.container -->
+        <div class="container">
+            <div class="row">
+                 <div class="col-sm-12">
+                            <div class="portfolio-item">
+                                <p>If you are using a mobile platform, you need to install google sheet app to be able to edit.</p>
+                            </div>
+                        </div>
+                
+            </div><!-- /.row -->
+        </div><!-- /.container -->        
     </section>
 
  <!--   
