--- a/assets.html
+++ b/assets.html
@@ -173,19 +173,19 @@
                                 <br>
                                 <a href=./assets/Holders.Alp.zip> <p>3D Holder Model</p> </a><p>Copy content of extracted folder to: C/Alphacam/LICOMDAT/Holder.Alp</p> 
                                 <br>
-                                <a href=./assets/LICOMDIR_Styles.zip> <p>CNC Style Library</p> </a> 
-                                <p>Copy content of extracted folder to: C/Alphacam/LICOMDIR/Styles</p>
+                                <a href=./assets/Styles.zip> <p>CNC Style Library <b>UPDATE 19-01-2018.</b></p> </a> 
+                                <p>Copy content of extracted folder to: C/Alphacam/LICOMDIR/Styles </p>
                             </div>
 
                         </div>
 
                     <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="./tutorials/cnc/Alphacam%202017%20R1%20Installationsvejledning.pdf" download>
+                                <a href="./assets/Alphacam2018InstallHomworkMode.pdf" download>
                                     <p>Alphacam 17 Instalationsguide DK</p>
                                     
                                 </a>
-                                <p>Ignore the licenece instalation part, just run in homwork mode and your fine.</p>
+                                <p>Student licence runs in Homwork Mode.</p>
                                 
                             </div>
 
