CNC Work files and punktlektion Laser cutter

--- a/assets.html
+++ b/assets.html
@@ -183,9 +183,11 @@
                             <div class="portfolio-item">
                                 <a href="./assets/Alphacam2018InstallHomworkMode.pdf" download>
                                     <p>Alphacam 17 Instalationsguide DK</p>
-                                    
-                                </a>
+                                    </a>
                                 <p>Student licence runs in Homwork Mode.</p>
+                                <br>
+                                <a href="./assets/CNC_FundametalWorkfile.zip" download>
+                                    <p>Work Files for Fundamental CNC Course</p></a>
                                 
                             </div>
 
