--- a/tutorial.html
+++ b/tutorial.html
@@ -107,6 +107,14 @@
                             </div>
                         </div>                                                                                                         
 
+                 <div class="col-sm-3">
+                            <div class="portfolio-item">
+                                <a href="./assets/punktlektionLasersk%C3%A6re.pdf">
+                                    <img class="img-portfolio img-responsive" src="img/tutorial/laser-DANSK.png">
+                                </a>
+                                <p>NY! Punktlektion Laser DK</p>
+                            </div>
+                        </div>
                    
                    
                  <div class="col-sm-3">
