--- a/index.html
+++ b/index.html
@@ -171,14 +171,11 @@
     <!-- Map -->
     <section id="contact" class="map">
         <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2248.8553841670546!2d12.552800315858478!3d55.691501980537!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253abae55267d%3A0x7f06e00bd751130a!2sKEA+-+Copenhagen+School+of+Design+and+Technology!5e0!3m2!1sen!2sdk!4v1484077094371"></iframe>
-        <br />
-
-      
+        <br/>
 
         <small>
             <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
         </small>
-        </iframe>
     </section>
 
     <!-- Footer -->
@@ -195,6 +192,14 @@
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:makerlab@kea.dk">makerlab@kea.dk</a>
                         </li>
                     </ul>
+                    <br>
+                    <p> <b>OPENING TIME:</b></p>
+                        <ul class="list-unstyled">
+                            <li><i class="fa fa-clock-o fa-fw"></i> <b>Workshop:</b> Mon-Fri,  09-18</li>
+                            <li><i class="fa fa-clock-o fa-fw"></i><b>Work area:</b> Mon-Fri, 09-22</li>
+                        </ul>
+  
+                    
                     <br>
                     <ul class="list-inline">
                         <li>
