Download link Alphacam updated work file

--- a/assets.html
+++ b/assets.html
@@ -181,15 +181,20 @@
 
                     <div class="col-md-4">
                             <div class="portfolio-item">
+                                <a href="https://drive.google.com/open?id=1lee7AzNjjnMvFN8RbYppTc8rKnCTmf48" download>
+                                    <p>Alphacam 18 Installation</p>
+                                    <br>
+                                    </a>
                                 <a href="./assets/Alphacam2018InstallHomworkMode.pdf" download>
-                                    <p>Alphacam 17 Instalationsguide DK</p>
+                                    <p>Alphacam 18 Instalationsguide DK</p>
                                     </a>
                                 <p>Student licence runs in Homwork Mode.</p>
+                                <br>
                                 <br>
                                 <a href="./assets/CNC_FundametalWorkfile.zip" download>
                                     <p>Work Files for Fundamental CNC Course</p></a>
                                 
-                            </div>
+                            </div> 
 
                     </div>
                                                                                                                       
