--- a/tutorial.html
+++ b/tutorial.html
@@ -72,7 +72,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Tutorial links:</h2>
+                    <h1>TUTORIAL LINKS:</h1>
+                    <br>
+                    <h2>CNC Tutorial:</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-sm-3">
@@ -143,13 +145,54 @@
         </div>
         <!-- /.container -->
     </section>
+
+  <section id="portfolio" class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>T-Shirt Printer Tutorial:</h2>
+                    <hr class="small">
+                    <div class="row">
+
+                        <div class="col-sm-3">
+                             <div class="portfolio-item">
+                                <a href="./tutorials/tshirtPrinter/PunktlektionTshirtprinter.pdf">
+                                    <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-01.png">
+                                </a>
+                                <p>NY! Punktlektion DK</p>
+                             </div>
+                         </div>
+
+
+                        <div class="col-sm-3">
+                             <div class="portfolio-item">
+                                <a href="./tutorials/tshirtPrinter/MANUAL%20T-SHIRT_August.pdf">
+                                    <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-01.png">
+                                </a>
+                             </div>
+                         </div>   
+
+                        <div class="col-sm-3">
+                             <div class="portfolio-item">
+                                <a href="https://docs.google.com/document/d/1zxnJvLLCnU7GlJZPOdZpv80dopVkGZhOAT_FPnPbHAA/edit?usp=sharingf">
+                                    <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-02.png">
+                                </a>
+                             </div>
+                         </div>  
+                    </div>
+                </div>
+             </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>  
     
     
   <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Textile & T-Shirt Tutorial:</h2>
+                    <h2>Textile Printer Tutorials:</h2>
                     <hr class="small">
                     <div class="row">
                             <div class="col-sm-3">
@@ -168,23 +211,7 @@
                             </a>
                          </div>
                      </div>
-
-
-                    <div class="col-sm-3">
-                         <div class="portfolio-item">
-                            <a href="./tutorials/tshirtPrinter/MANUAL%20T-SHIRT_August.pdf">
-                                <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-01.png">
-                            </a>
-                         </div>
-                     </div>   
-
-                    <div class="col-sm-3">
-                         <div class="portfolio-item">
-                            <a href="https://docs.google.com/document/d/1zxnJvLLCnU7GlJZPOdZpv80dopVkGZhOAT_FPnPbHAA/edit?usp=sharingf">
-                                <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-02.png">
-                            </a>
-                         </div>
-                     </div>  
+ 
                     </div>
                 </div>
              </div>
