updated punktlektion laser & tShirt

--- a/tutorial.html
+++ b/tutorial.html
@@ -116,7 +116,7 @@
                     <div class="row">
                          <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="./assets/punktlektionLasersk%C3%A6re.pdf">
+                                <a href="./tutorials/laserCutter/Punktlektion%20lasersk%C3%A6re%20version%202.0.pdf">
                                     <img class="img-portfolio img-responsive" src="img/tutorial/laser-DANSK.png">
                                 </a>
                                 <p>NY! Punktlektion Laser DK</p>
@@ -156,7 +156,7 @@
 
                         <div class="col-sm-3">
                              <div class="portfolio-item">
-                                <a href="./tutorials/tshirtPrinter/PunktlektionTshirtprinter.pdf">
+                                <a href="./tutorials/tshirtPrinter/Punktlektion%20T-shirt%20printer%20version%201.0.pdf">
                                     <img class="img-portfolio img-responsive" src="img/tutorial/tshirt-01.png">
                                 </a>
                                 <p>NY! Punktlektion DK</p>
