Added 3D scan Booking and Alpha cam 3D solid pdf

--- a/assets.html
+++ b/assets.html
@@ -169,12 +169,12 @@
                                 </a>
                                 <br>
                                 <a href=./assets/RTools.Alp.zip> <p>CNC Tool Library</p> </a> 
-                                <p>Copy content of extracted folder to: C/Alphacam/LICOMDAT/RTools.Alp</p>
+                                <p>Replace folder to: C/Alphacam/LICOMDAT/RTools.Alp</p>
                                 <br>
-                                <a href=./assets/Holders.Alp.zip> <p>3D Holder Model</p> </a><p>Copy content of extracted folder to: C/Alphacam/LICOMDAT/Holder.Alp</p> 
+                                <a href=./assets/Holders.Alp.zip> <p>3D Holder Model</p> </a><p> Replace folder: C/Alphacam/LICOMDAT/Holders.Alp</p> 
                                 <br>
                                 <a href=./assets/Styles.zip> <p>CNC Style Library <b>UPDATE 19-01-2018.</b></p> </a> 
-                                <p>Copy content of extracted folder to: C/Alphacam/LICOMDIR/Styles </p>
+                                <p>Replace folder: C/Alphacam/LICOMDIR/Styles </p>
                             </div>
 
                         </div>
