Vacuum mold guide uploaded to tutorial

--- a/3DScaningReCap.html
+++ b/3DScaningReCap.html
@@ -12,7 +12,7 @@
    
     
         
-    <title>3D Printing</title>
+    <title>3D Scanning</title>
     <link rel="stylesheet" href="https://stackedit.io/res-min/themes/base.css" />
 
     <!-- Bootstrap Core CSS -->
