--- a/tutorial.html
+++ b/tutorial.html
@@ -275,6 +275,14 @@
                                 </a>
                              </div>
                          </div>
+                        
+                        <div class="col-sm-3">
+                             <div class="portfolio-item">
+                                <a href="./tutorials/VacuumFormingGuide.pdf">
+                                    <img class="img-portfolio img-responsive" src="img/tutorial/vacuum-01.png">
+                                </a>
+                             </div>
+                         </div>
 
 
 
