--- a/assets.html
+++ b/assets.html
@@ -168,12 +168,12 @@
                                     <p>Alphacam Interface</p>
                                 </a>
                                 <br>
-                                <a href=./assets/RTools.Alp.zip> <p>CNC Tool Library</p> </a> 
+                                <a href=./assets/RTools.Alp.zip> <p>CNC Tool Library <b>UPDATE 4-7-2018.</b></p> </a> 
                                 <p>Replace folder to: C/Alphacam/LICOMDAT/RTools.Alp</p>
                                 <br>
                                 <a href=./assets/Holders.Alp.zip> <p>3D Holder Model</p> </a><p> Replace folder: C/Alphacam/LICOMDAT/Holders.Alp</p> 
                                 <br>
-                                <a href=./assets/Styles.zip> <p>CNC Style Library <b>UPDATE 19-01-2018.</b></p> </a> 
+                                <a href=./assets/Styles.zip> <p>CNC Style Library <b>UPDATE 4-7-2018.</b></p> </a> 
                                 <p>Replace folder: C/Alphacam/LICOMDIR/Styles </p>
                             </div>
 
