udated signup page

--- a/signup.html
+++ b/signup.html
@@ -74,25 +74,17 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Sign-Up links:</h2>
                     <hr class="small">
-                       <!-- Lab Introduction 2018 -->
+                       <!-- Lab ACCESS 2018 -->
                     <div class="row">
                         <div class="col-sm-3"> 
                             <div class="portfolio-item">
                                 <a href="https://docs.google.com/spreadsheets/d/1xuYUOZjpdXsXiasYgsYPFEHSOKMA9WrIqJDBIkgHtx8/edit#gid=0">
-                                    <img class="img-portfolio img-responsive" src="img/signUp_Intro.png">
+                                    <img class="img-portfolio img-responsive" src="img/signUp_Access.png">
                                     
                                 </a>
                             </div>
                         </div>
-                        <!-- Wood Workshop & Safety 2018 -->
-                        <div class="col-sm-3">
-                            <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1cLKokdIua30npoFGYeWurTCApu9AgyGwcqoOENTvOvg/edit#gid=0">
-                                    <img class="img-portfolio img-responsive" src="img/signUp_WoodWorshop.png">
-                                </a>
-                            </div>
 
-                        </div>
                         <!-- Laser Cutting Fundamental  -->
                         <div class="col-sm-3">
                             <div class="portfolio-item">
