fixed broken link lasercutter tutorial and added interface tutorial to alphacam

--- a/assets.html
+++ b/assets.html
@@ -157,7 +157,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=15RT2RQB2GmVAGAr0lesw0e4FVNGxWg4jnV12_Qx0CO8">
+                                <a href="https://docs.google.com/spreadsheets/d/15RT2RQB2GmVAGAr0lesw0e4FVNGxWg4jnV12_Qx0CO8/edit#gid=1504005596">
                                     <p>Feeds and Speeds chart</p>
                                 </a> 
                             </div>
@@ -166,6 +166,8 @@
                             <div class="portfolio-item">
                                 <a href="./assets/KEA_Layout_2016R1.xml" download>
                                     <p>Alphacam Interface</p>
+                                </a> <a href="./img/CNC_Load_Interface.png"target="_blank">
+                                    <p>Show me how to load this file in Alpahcam.</p>
                                 </a>
                                 <br>
                                 <a href=./assets/RTools.Alp.zip> <p>CNC Tool Library <b>UPDATE 4-7-2018.</b></p> </a> 
