updated promotion img

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="col-sm-12">
                             <div class="portfolio-item">
                                 <a href="./promotions/Games/LabQuest.html">
-                                    <img class="img-portfolio img-responsive" src="./promotions/Games/websitePromotionIMG1.png">
+                                    <img class="img-portfolio img-responsive" src="./img/T-SHIRT.png">
                                 </a>
                             </div>
                         </div> 
