removed workshop banner

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <!-- /.container -->
     </section>
     
-    <!-- Spill link -->
+    <!-- Spill link
     <section id="about" class="about">
         <div class="container">
             <div class="row">
@@ -109,7 +109,7 @@
             <!-- /.row -->
         </div>
         <!-- /.container -->
-    </section>
+    </section>-->
 
     <!-- Services -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
