updaged image 3D scan

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="col-sm-12">
                             <div class="portfolio-item">
                                 <a href="https://www.facebook.com/events/771246763267567/">
-                                    <img class="img-portfolio img-responsive" src="./img/3DScan.png">
+                                    <img class="img-portfolio img-responsive" src="./img/3DScan1.png">
                                 </a>
                                     
                                 
