KEA store img og het transfer tutorial

--- a/assets.html
+++ b/assets.html
@@ -274,7 +274,7 @@
                         <div class="col-md-12">
                             <div class="portfolio-item">
                                 <p><a href="./assets/Roland_BN20.zip">Roland Versaworks Swatch Library.</a></p>
-                                <p>Windows copy to: C/ProgrameFiles/Adobe/Adobe Illustrator CC 2017/Preset/en_GB/Swatch</p>
+                                <p>Windows copy to: C:\Program Files\Adobe\Adobe Illustrator CC 2019\Presets</p>
                                 <p>MAC copy to: Library/ApplicationsSupport/Adobe/Adobe Illustrator CC 2017/Preset/en_GB/Swatch /</p>
                                 
                             </div>
