--- a/tutorial.html
+++ b/tutorial.html
@@ -225,6 +225,15 @@
                             </a>
                          </div>
                      </div>
+                        
+                    <div class="col-sm-2">
+                         <div class="portfolio-item">
+                            <a href="./heat_transfer.html">
+                                <img class="img-portfolio img-responsive" src="img/tutorial/heatTransferPrint-01.png">
+                                <p>With Roland BN20</p>
+                            </a>
+                         </div>
+                     </div>
  
                     </div>
                 </div>
