--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="portfolio-item">
                         <a href="kea_store.html">
-                            <img class="img-portfolio img-responsive" src="./img/KEAStore/KEAStore.png">
+                            <img class="img-portfolio img-responsive" src="./img/KEAStore/Button_KEA%20Store.png">
                         </a>
                     </div>
                 </div>
