Spell fixes KEa Store

--- a/kea_store.html
+++ b/kea_store.html
@@ -123,7 +123,7 @@
                                 <h4>
                                     <strong>Shop</strong>
                                 </h4>
-                                <p>Materila lists and price.</p>
+                                <p>Material lists and price.</p>
                             
                                 <a href="store_shop.html" class="btn btn-light">Now that is a bargain!</a>
                             </div>
@@ -138,7 +138,7 @@
                                 <h4>
                                     <strong>Exhibit</strong>
                                 </h4>
-                                <p>Borrow the space for your events exhibeits.</p>
+                                <p>Borrow the space for your events exhibits.</p>
                                 <a href="store_exhibit.html" class="btn btn-light">Yes, I want to do that!</a>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                                 </h4>
                                 <p>List of camera gear that you can lend.</p>
                                 
-                                <a href="store_lend.html" class="btn btn-light">Cant belive it free!</a>
+                                <a href="store_lend.html" class="btn btn-light">Cant believe it free!</a>
                             </div>
                         </div>
 
