updated Rtools og styles assets

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="http://kea-makerlab.github.io/hello/"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                            <a href="https://www.instagram.com/kea_makerlab/"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                 </div>
