Added access quiz

--- a/signup.html
+++ b/signup.html
@@ -97,6 +97,13 @@
                                 </a>
                             </div>
                         </div>
+                        
+                        <div class="col-sm-3"> 
+                            <div class="portfolio-item">
+                                <a href="https://b.socrative.com/login/student/"target="_blank" > <img class="img-portfolio img-responsive" src="img/signUp_Access_Quiz.png"></a>
+                                
+                            </div>
+                        </div>
 
                         <!-- Laser Cutting Fundamental  -->
                         <div class="col-sm-3">
