Space Maze game added

--- a/assets.html
+++ b/assets.html
@@ -200,12 +200,12 @@
 
                     <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="https://drive.google.com/open?id=1lee7AzNjjnMvFN8RbYppTc8rKnCTmf48" download>
-                                    <p>Alphacam 18 Installation</p>
+                                <a href="https://drive.google.com/open?id=1rFtST2RXX_mw8_6ltss_WCjZmtRMryW7" download>
+                                    <p>Alphacam 19 Installation</p>
                                     <br>
                                     </a>
-                                <a href="./assets/Alphacam2018InstallHomworkMode.pdf" download>
-                                    <p>Alphacam 18 Instalationsguide DK</p>
+                                <a href="./assets/Alphacam%202019%20R1%20InstallationsvejledningStudVers.pdf" download>
+                                    <p>Alphacam 19 Installationsguide DK</p>
                                     </a>
                                 <p>Student licence runs in Homwork Mode. Open Alphacam Licence manager to switch</p>
                                 <br>
