Fixed link to screen print booking

--- a/booking.html
+++ b/booking.html
@@ -143,7 +143,7 @@
                         
                         <div class="col-sm-3">
                             <div class="portfolio-item">
-                                <a href="https://docs.google.com/spreadsheets/d/1V9ItQQuQxr-5D1VhG27NFzPvx6bHZdvGiURcK1Tbddk/edit?usp=sharing">
+                                <a href="https://docs.google.com/spreadsheets/d/1V9ItQQuQxr-5D1VhG27NFzPvx6bHZdvGiURcK1Tbddk/edit?usp=sharingg">
                                     <img class="img-portfolio img-responsive" src="img/QR_CodeTags_Serigrafi.png">
                                 </a>
                             </div>
