Opening times KEA Store

--- a/kea_store.html
+++ b/kea_store.html
@@ -196,6 +196,7 @@
                     <br>
                     <p> <b>OPENING TIME:</b></p>
                         <ul class="list-unstyled">
+                            <li> <font  color="red"><i class="fa fa-asterisk" aria-hidden="true"></i> <b>Closed for summer! Open 26 Aug.</b> </font></li>
                             <li><i class="fa fa-clock-o fa-fw"></i> <b>Mon-Fri:</b> kl:  14-16</li>
                             
                         </ul>
